test/negative/216_break_outside_loop.err
216_break_outside_loop.fx:4:17: error: cannot use 'break' outside of loop
 4 | fun f(): void { break }
   |                 ^

1 errors occured during type checking.
